# untitled_space_game

./: Cargo.toml  README.md
resource/module/: cube_hull.module
src/: app.rs  camera.rs  entity.rs  main.rs  module.rs  perspective_camera.rs  physics.rs  physics_scene.rs  player.rs  renderer.rs  space_craft.rs  transform.rs  world.rs
src/shader/: color.wgsl  pbr_material_static_mesh.wgsl
