[package]
name = "untitled_space_game"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
pretty_env_logger = "0.4.0"
thiserror = "1.0"

glam = {version = "0.22.0", features = ["serde"]}
slotmap = "1.0.6"
serde = {version = "1.0.0", features = ["derive"]}
serde_json = "1.0.0"

nalgebra = {version = "0.32.1", features = ["convert-glam022"]}
rapier3d = { version = "0.17.1",  features = ["simd-nightly"]}

winit = "0.27.5"
wgpu = "0.15.0"
bytemuck = {version =  "1.13.0", features = ["derive"]}
pollster = "0.2.5"

tobj = "3.2.4"